--- a/GroceryStoreApp/build.gradle
+++ b/GroceryStoreApp/build.gradle
@@ -26,4 +26,7 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    
+    implementation 'magellan.example:FruitLib:1.0'
 }
